--- a/site/templates/twig/items/itm/options/list.twig
+++ b/site/templates/twig/items/itm/options/list.twig
@@ -3,7 +3,9 @@
 	-------------------------------------------------
 	page                   ProcessWire\Page(pw_template=itm)
 	input                  ProcessWire\WireInput
-	addm                   Dplus\Min\Inmain\Addm\Addm
+	itm                    module Itm
+	itmOpt                 Dplus\Min\Inmain\Itm\Options
+	item                   ItemMasterItem
 	options                Propel\Runtime\Util\PropelModelPager (MsaSysopCode[])
 #}
 {% set response = addm.getResponse() %}
@@ -22,11 +24,11 @@
 			{% for option in options %}
 				{# set class = xref.addonitemid == input.get.text('focus') ? 'highlight' : '' #}
 				{# set class = (response.hasSuccess() and response.key == [xref.itemid, xref.addonitemid]|join(addm.recordlocker.glue())) ? 'bg-success text-white' : class #}
-
+				{% set itmcode = itmOpt.code(item.itemid, option.id) %}
 				<tr data-key="{{ option.id }}" class="{# class #}">
 					<td>{{ option.description }}</td>
-					<td>code</td>
-					<td>VALUE</td>
+					<td>{{ itmcode.description|length == 0 ? '' : itmcode.code }}</td>
+					<td>{{ itmcode.description ? itmcode.description : itmcode.code }}</td>
 					<td>
 						edit
 					</td>
