--- a/site/templates/twig/items/itm/options/list.twig
+++ b/site/templates/twig/items/itm/options/list.twig
@@ -17,7 +17,7 @@
 				<th class="py-2">Option</th>
 				<th class="py-2">Code</th>
 				<th class="py-2">Description</th>
-				<th class="py-2">Description</th>
+				<th class="py-2"></th>
 			</tr>
 		</thead>
 		<tbody>
@@ -25,6 +25,7 @@
 				{# set class = xref.addonitemid == input.get.text('focus') ? 'highlight' : '' #}
 				{# set class = (response.hasSuccess() and response.key == [xref.itemid, xref.addonitemid]|join(addm.recordlocker.glue())) ? 'bg-success text-white' : class #}
 				{% set itmcode = itmOpt.code(item.itemid, option.id) %}
+
 				<tr data-key="{{ option.id }}" class="{# class #}">
 					<td>{{ option.description }}</td>
 					<td>
@@ -35,8 +36,16 @@
 						{% endif %}
 					</td>
 					<td>{{ itmcode.description ? itmcode.description : itmcode.code }}</td>
-					<td>
-						edit
+					<td class="text-center">
+						{% if itm.recordlocker.isLocked(item.itemid) == false or itm.recordlocker.userHasLocked(item.itemid) %}
+							<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-json="{{ itmOpt.codeJson(itmcode)|json_encode }}">
+								<i class="fa fa-pencil" aria-hidden="true"></i> Edit
+							</button>
+							&nbsp; &nbsp;
+							<a href="{# page.xrefDeleteUrl(item.custid, item.custitemid, item.itemid) #}" class="btn btn-danger btn-sm delete_button">
+								<i class="fa fa-trash" aria-hidden="true"></i> Delete
+							</a>
+						{% endif %}
 					</td>
 				</tr>
 			{% endfor %}
