--- a/site/templates/twig/items/itm/options/js/classes/Form.js.twig
+++ b/site/templates/twig/items/itm/options/js/classes/Form.js.twig
@@ -21,16 +21,21 @@ class CodeForm {
 		this.inputs.description.text('');
 		modal.find('.modal-title').text('Editing ' + json.sysop)
 
+		var server   = CodeRequests.getInstance();
+		var url = server.codeOptionsUrl('IN', json.sysop);
+
+		this.inputs.code.closest('.input-group').find('button[data-lookupurl]').attr('data-lookupurl', url);
+
 		if (json) {
 			this.inputs.sysop.val(json.sysop);
 			this.inputs.code.val(json.code);
 			this.inputs.description.text(json.description);
+
 			if (json.code) {
 				this.inputs.submit.delete.removeAttr('disabled');
 			} else {
 				this.inputs.submit.delete.attr('disabled', 'true');
 			}
-
 			return true;
 		}
 	}
