Add requests js

--- a/site/templates/twig/items/itm/options/js/classes.js.twig
+++ b/site/templates/twig/items/itm/options/js/classes.js.twig
@@ -1,3 +1,4 @@
 {% include 'items/itm/options/js/classes/Alerts.js.twig' %}
+{% include 'items/itm/options/js/classes/Requests.js.twig' %}
 {% include 'items/itm/options/js/classes/Inputs.js.twig' %}
 {% include 'items/itm/options/js/classes/Form.js.twig' %}
