--- a/site/templates/twig/items/itm/options/modal/code/form.twig
+++ b/site/templates/twig/items/itm/options/modal/code/form.twig
@@ -42,11 +42,11 @@
 							'colorclass': 'btn-secondary',
 							'text': 'fa fa-search'|icon,
 							'attributes': {
-								'title': 'Search Codes',
+								'title': 'Search Options',
 								'data-toggle': 'modal',
 								'data-target': '#ajax-modal',
 								'data-lookupurl': '',
-								'data-input': '#code'
+								'data-input': '#code',
 								'data-system': 'IN',
 							}
 						}
