--- a/site/templates/twig/items/itm/options/.js.twig
+++ b/site/templates/twig/items/itm/options/.js.twig
@@ -9,7 +9,7 @@ $(function() {
 	$('#edit-code-modal').on('show.bs.modal', function (event) {
 		var button = $(event.relatedTarget) // Button that triggered the modal
 		var json = button.data('json');
-		formCode.updateInputsFromJson(json);
+		formCode.updateFormFromJson(json);
 	});
 
 
