--- a/site/templates/twig/items/itm/options/modal/code/form.twig
+++ b/site/templates/twig/items/itm/options/modal/code/form.twig
@@ -11,7 +11,8 @@
 						'attributes': {
 							'placeholder': '',
 							'aria-label':  'Code',
-							'readonly': true
+							'readonly': true,
+							'data-system': 'IN',
 						},
 						'addclasses': [
 							'form-control-plaintext'
