--- a/site/templates/twig/items/itm/options/modal/code/form.twig
+++ b/site/templates/twig/items/itm/options/modal/code/form.twig
@@ -1,4 +1,6 @@
 <form action="{{ input.paginateUrl(1) }}" method="POST" id="code-form">
+	<input type="hidden" name="system" id="system" value="IN">
+
 	<div class="row form-group">
 		<div class="col-sm-4">
 			<label for="sysop">Option</label>
