--- a/site/templates/twig/items/itm/options/js/classes/Form.js.twig
+++ b/site/templates/twig/items/itm/options/js/classes/Form.js.twig
@@ -22,21 +22,22 @@ class CodeForm {
 	}
 
 	updateInputsFromJson(json = null) {
-		this.inputs.sysop.val('');
-		this.inputs.code.val('');
-		this.inputs.description.text('');
+		var inputs = this.inputs;
+		inputs.sysop.val('');
+		inputs.code.val('');
+		inputs.description.text('');
 
 		var server   = CodeRequests.getInstance();
 		var url = server.codeOptionsUrl(this.system, json.sysop);
 
-		this.inputs.code.closest('.input-group').find('button[data-lookupurl]').attr('data-lookupurl', url);
+		inputs.code.closest('.input-group').find('button[data-lookupurl]').attr('data-lookupurl', url);
 
-		this.inputs.sysop.val(json.sysop);
-		this.inputs.code.val(json.code);
-		this.inputs.description.text(json.description);
+		inputs.sysop.val(json.sysop);
+		inputs.code.val(json.code);
+		inputs.description.text(json.description);
 
 		if (json.code) {
-			this.inputs.submit.delete.removeAttr('disabled');
+			inputs.submit.delete.removeAttr('disabled');
 			server.getSysop(this.system, json.sysop, function(sysop) {
 
 			});
