--- a/site/templates/twig/items/itm/options/.js.twig
+++ b/site/templates/twig/items/itm/options/.js.twig
@@ -72,6 +72,9 @@ $(function() {
 					}
 				}
 			},
+			code: {
+				required: false,
+			},
 		},
 		errorPlacement: function(error, element) {
 			error.insertAfter(element).addClass('invalid-feedback');
