--- a/site/templates/twig/items/itm/options/js/classes/Form.js.twig
+++ b/site/templates/twig/items/itm/options/js/classes/Form.js.twig
@@ -21,14 +21,18 @@ class CodeForm {
 		this.updateInputsFromJson(json);
 	}
 
-	updateInputsFromJson(json = null) {
-		var inputs = this.inputs;
-		inputs.sysop.val('');
-		inputs.code.val('');
-		inputs.description.text('');
+	clearInputs() {
+		this.inputs.sysop.val('');
+		this.inputs.code.val('');
+		this.inputs.description.text('');
+	}
 
+	updateInputsFromJson(json = null) {
+		this.clearInputs();
+
+		var inputs = this.inputs;
 		var server   = CodeRequests.getInstance();
-		var url = server.codeOptionsUrl(this.system, json.sysop);
+		var url      = server.codeOptionsUrl(this.system, json.sysop);
 
 		inputs.code.closest('.input-group').find('button[data-lookupurl]').attr('data-lookupurl', url);
 
@@ -36,13 +40,56 @@ class CodeForm {
 		inputs.code.val(json.code);
 		inputs.description.text(json.description);
 
+		var rules = {
+			required: false,
+		};
+
 		if (json.code) {
 			inputs.submit.delete.removeAttr('disabled');
-			server.getSysop(this.system, json.sysop, function(sysop) {
+		} else {
+			inputs.submit.delete.attr('disabled', 'true');
+		}
+		$('#' + inputs.code.attr('id')).rules('remove', 'required remote');
+		this.getCodeJqvRules(json, function(rules) {
+			$('#' + inputs.code.attr('id')).rules('add', rules);
+		});
+	}
 
+	getCodeJqvRules(json, callback) {
+		var rules = {required: false};
+
+		if (json.code) {
+			var form = this;
+			var server   = CodeRequests.getInstance();
+
+			server.getSysop(this.system, json.sysop, function(sysop) {
+				rules.required = sysop.input.force;
+				if (sysop.input.validate) {
+					rules.remote = form.getCodeJqvRemoteData();
+				}
+				callback(rules);
 			});
 		} else {
-			this.inputs.submit.delete.attr('disabled', 'true');
+			callback(rules);
 		}
+	}
+
+	getCodeJqvRemoteData() {
+		return {
+			url: '{{ page.jsonapiURL('msa/validate/sysop/option') }}',
+			type: "get",
+			data: {
+				jqv: 'true',
+				system: function() {
+					return $('input[name=system]').val();
+				},
+				sysop: function() {
+					return $('input[name=sysop]').val();
+				},
+				code: function() {
+					return $('input[name=code]').val();
+				},
+			}
+		};
 	}
 }
