--- a/site/templates/twig/items/itm/options/modal/code/form.twig
+++ b/site/templates/twig/items/itm/options/modal/code/form.twig
@@ -1,4 +1,5 @@
 <form action="{{ input.paginateUrl(1) }}" method="POST" id="code-form">
+	<input type="hidden" name="itemID" id="itemID" value="{{ input.get.text('itemID') }}">
 	<input type="hidden" name="system" id="system" value="IN">
 
 	<div class="row form-group">
