--- a/site/templates/twig/items/itm/options/modal/code/form.twig
+++ b/site/templates/twig/items/itm/options/modal/code/form.twig
@@ -40,6 +40,7 @@
 							'attributes': {
 								'placeholder': '',
 								'aria-label':  'Code',
+								'data-jqv': 'true'
 							}
 						},
 						'button': {
