--- a/site/templates/twig/items/itm/options/display.twig
+++ b/site/templates/twig/items/itm/options/display.twig
@@ -2,6 +2,7 @@
 
 {% block body %}
 	{% include 'items/itm/options/list.twig' %}
+	{% include 'util/paginator/propel.twig' with {'pager': options} %}
 {% endblock %}
 
 {% block footer %}
