--- a/site/templates/twig/msa/noce/ajax/form.twig
+++ b/site/templates/twig/msa/noce/ajax/form.twig
@@ -1,8 +1,10 @@
-<form action="{{ page.searchURL }}" method="get" class="allow-enterkey-submit" id="predefined-notes-form">
+<form action="{{ input.paginateUrl(1) }}" method="get" class="allow-enterkey-submit" id="predefined-notes-form">
 	<div class="input-group form-group">
 		<input class="form-control form-group inline" type="text" name="q" value="" placeholder="Search Pre-Defined Note Code, Description">
 		<span class="input-group-btn">
-			<button type="submit" class="btn btn-default"> <i class="fa fa-search"></i> <span class="sr-only">Search</span> </button>
+			<button type="submit" class="btn btn-light">
+				<i class="fa fa-search"></i> <span class="sr-only">Search</span>
+			</button>
 		</span>
 	</div>
 </form>
