--- a/site/templates/twig/msa/noce/ajax/list.twig
+++ b/site/templates/twig/msa/noce/ajax/list.twig
@@ -28,11 +28,11 @@
 					<span class="summary" data-id="{{ note.id }}">{{ note.note }}</span>
 				</div>
 				<div class="col-4 text-center">
-					<button type="button" class="btn btn-light" data-toggle="collapse" data-target="#notes-{{ note.id|urlencode|attrJS }}" aria-controls="#notes-{{ note.id|urlencode|attrJS }}">
+					<button type="button" class="btn btn-light btn-sm" data-toggle="collapse" data-target="#notes-{{ note.id|urlencode|attrJS }}" aria-controls="#notes-{{ note.id|urlencode|attrJS }}">
 						<i class="fa fa-eye" aria-hidden="true"></i> Show
 					</button>
 					&nbsp;
-					<button type="button" class="btn btn-secondary use-note" data-id="{{ note.id }}">
+					<button type="button" class="btn btn-secondary btn-sm use-note" data-id="{{ note.id }}">
 						<i class="fa fa-pencil" aria-hidden="true"></i> Use
 					</button>
 				</div>
@@ -40,7 +40,7 @@
 			<div class="row align-items-center">
 				<div class="col-2"></div>
 				<div class="col-6">
-					<textarea class="collapse form-control-plaintext hidden-note" data-id="{{ note.id }}" id="notes-{{ note.id|urlencode|attrJS }}" cols="{{ qnotes.get_column_count() }}" rows="10" readonly>{{ qnotes.get_notes_form_array(note.id)|join('\r') }}</textarea>
+					<textarea class="collapse form-control-plaintext hidden-note" data-id="{{ note.id }}" id="notes-{{ note.id|urlencode|attrJS }}" cols="{{ qnotes.fieldAttribute('note', 'cols') }}" rows="10" readonly>{{ qnotes.getNotesArray(note.id)|join('\r') }}</textarea>
 				</div>
 				<div class="col-4"></div>
 			</div>
