Add view printable buttons

--- a/site/templates/twig/util/bread-crumbs.twig
+++ b/site/templates/twig/util/bread-crumbs.twig
@@ -1,4 +1,4 @@
-<nav aria-label="breadcrumb rounded-0">
+<nav aria-label="breadcrumb rounded-0" class="d-print-none">
 	<ol class="breadcrumb">
 		{% block parents %}
 			{% for parent in page.parents() %}
