--- a/site/templates/twig/code-tables/mgl/display.twig
+++ b/site/templates/twig/code-tables/mgl/display.twig
@@ -11,7 +11,7 @@
 		</button>
 	{% else %}
 		<a href="{{ page.menuUrl() }}" class="btn btn-primary">
-			<i class="fa fa-arrow-left" aria-hidden="true"></i> Back to GLMAIN
+			<i class="fa fa-arrow-left" aria-hidden="true"></i> Back to {{ page.menuTitle() }}
 		</a>
 		&nbsp;
 		<a href="{{ page.get_printURL() }}" class="btn btn-primary">
