--- a/site/templates/twig/dplus-menu/function-menu.twig
+++ b/site/templates/twig/dplus-menu/function-menu.twig
@@ -2,6 +2,8 @@
 {% set segments    = input.urlSegments() %}
 {% set lastsegment = segments[segments|length] %}
 
+
+
 {% include 'dplus-menu/menu-search-form.twig' with {'page': pages.get('/')} %}
 
 <div class="mb-3">
@@ -13,9 +15,12 @@
 	{% endif %}
 
 	{% if segments|length %}
+		{% set title = page.dplus_function ? page.dplus_function|upper : page.title %}
+		{% set title = page.wire('hooks').isHooked('Page::menuTitle()') ? page.menuTitle() : title %}
+		
 		<a href="{{ page.url }}" class="btn btn-primary">
 			<i class="fa fa-undo" aria-hidden="true"></i> &nbsp;
-			Back to {{ page.dplus_function ? page.dplus_function|upper : page.title }}
+			Back to {{ title }}
 		</a>
 	{% endif %}
 </div>
