--- a/site/templates/twig/code-tables/mpm/rcm/list.twig
+++ b/site/templates/twig/code-tables/mpm/rcm/list.twig
@@ -6,13 +6,33 @@
 #}
 {% set response = manager.getResponse() %}
 
+<div class="mb-3">
+	{% if page.is_print() %}
+		<button onclick="window.history.back();" class="btn btn-primary d-print-none">
+			<i class="fa fa-undo" aria-hidden="true"></i> Back
+		</button>
+		&nbsp;
+		<button class="btn btn-primary d-print-none" onclick="window.print();return false;">
+			<i class="fa fa-print" aria-hidden="true"></i> Print
+		</button>
+	{% else %}
+		<a href="{{ page.menuUrl() }}" class="btn btn-primary">
+			<i class="fa fa-undo" aria-hidden="true"></i> Back to {{ page.menuTitle() }}
+		</a>
+		&nbsp;
+		<a href="{{ page.get_printURL() }}" class="btn btn-primary">
+			<i class="fa fa-print" aria-hidden="true"></i> View Printable
+		</a>
+	{% endif %}
+</div>
+
 <div class="list-group codes-list mb-3">
 	<div class="list-group-item bg-dark text-white">
 		<div class="row align-items-center">
 			<div class="col-sm-2">
 				Code
 			</div>
-			<div class="col-sm-3">
+			<div class="col-sm-3 col-5">
 				Name
 			</div>
 			<div class="col-sm-4">
