Show if Code is required

--- a/site/templates/twig/items/itm/options/display.twig
+++ b/site/templates/twig/items/itm/options/display.twig
@@ -1,6 +1,9 @@
 {% extends 'items/itm/display.twig' %}
 
 {% block body %}
+	<div class="px-3">
+		<span class="badge badge-pill badge-warning">*</span> = Required
+	</div>
 	{% include 'items/itm/options/list.twig' %}
 	{% include 'util/paginator/propel.twig' with {'pager': options} %}
 {% endblock %}
