--- a/site/templates/twig/items/itm/options/list.twig
+++ b/site/templates/twig/items/itm/options/list.twig
@@ -14,6 +14,7 @@
 	<table class="table table-sm">
 		<thead>
 			<tr class="bg-dark text-white">
+				<th class="py-2"></th>
 				<th class="py-2">Option</th>
 				<th class="py-2">Code</th>
 				<th class="py-2">Description</th>
@@ -22,12 +23,19 @@
 		</thead>
 		<tbody>
 			{% for option in options %}
-				{% set itmcode = itmOpt.code(item.itemid, option.id) %}
+				{% set itmcode = itmOpt.codes.code(item.itemid, option.id) %}
 
 				{% set class = option.id == input.get.text('focus') ? 'highlight' : '' %}
 				{% set class = (response.hasSuccess() and response.key == [itmcode.itemid, option.id]|join('-')) ? 'bg-success text-white' : class %}
 				<tr data-key="{{ option.id }}" class="sysop {{ class }}" data-sysop="{{ option.id }}">
-					<td>{{ option.description }}</td>
+					<td class="text-center">
+						{% if itmOpt.getSysop().isRequired('IN', option.id) %}
+							<span class="badge badge-pill badge-warning">*</span>
+						{% endif %}
+					</td>
+					<td>
+						{{ option.description|spacepad(itmOpt.getSysop().fieldAttribute('description', 'maxlength'))|raw }}
+					</td>
 					<td>
 						{% if itmOpt.getSysop().isNote('IN', option.id) %}
 							Notes
@@ -38,9 +46,15 @@
 					<td>{{ itmcode.description ? itmcode.description : itmcode.code }}</td>
 					<td class="text-center">
 						{% if itm.recordlocker.isLocked(item.itemid) == false or itm.recordlocker.userHasLocked(item.itemid) %}
-							<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-json="{{ itmOpt.codeJson(option.id, itmcode)|json_encode }}">
-								<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-							</button>
+							{% if itmOpt.getSysop().isNote('IN', option.id) %}
+								<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-note-modal" data-json="{{ itmOpt.getSysop().codeJson(option)|json_encode }}">
+									<i class="fa fa-pencil" aria-hidden="true"></i> Edit
+								</button>
+							{% else %}
+								<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-json="{{ itmOpt.codes.codeJson(option.id, itmcode)|json_encode }}">
+									<i class="fa fa-pencil" aria-hidden="true"></i> Edit
+								</button>
+							{% endif %}
 							&nbsp; &nbsp;
 							<a href="{# page.xrefDeleteUrl(item.custid, item.custitemid, item.itemid) #}" class="btn btn-danger btn-sm delete_button">
 								<i class="fa fa-trash" aria-hidden="true"></i> Delete
