Add validator for note

--- a/site/templates/twig/items/itm/options/.js.twig
+++ b/site/templates/twig/items/itm/options/.js.twig
@@ -5,6 +5,7 @@ $(function() {
 	var server   = CodeRequests.getInstance();
 	var alert    = CodeAlerts.getInstance();
 	var formCode = CodeForm.getInstance();
+	var formNote = NoteForm.getInstance();
 
 	var uri = URI();
 
@@ -47,6 +48,13 @@ $(function() {
 		$('.sysop.bg-success').removeClass('bg-success text-white');
 		$('.highlight').removeClass('highlight');
 		$('.sysop[data-sysop="'+sysop+'"]').addClass('highlight');
+	});
+
+	$('#edit-note-modal').on('show.bs.modal', function (event) {
+		var button = $(event.relatedTarget) // Button that triggered the modal
+		var json = button.data('json');
+		console.log(json);
+		formNote.updateFormFromJson(json);
 	});
 
 /* =============================================================
@@ -119,6 +127,39 @@ $(function() {
 			},
 		},
 		errorPlacement: function(error, element) {
+			error.insertAfter(element).addClass('invalid-feedback');
+		},
+		submitHandler: function(form) {
+			$('#loading-modal').modal('show');
+			form.submit();
+		}
+	});
+
+	formNote.form.validate({
+		errorClass: "is-invalid",
+		validClass: "is-valid",
+		rules: {
+			sysop: {
+				required: true,
+				remote: {
+					url: '{{ page.jsonapiURL('msa/validate/sysop') }}',
+					type: "get",
+					data: {
+						jqv: 'true',
+						system: function() {
+							return $('input[name=system]').val();
+						}
+					}
+				}
+			},
+			note: {
+				required: false,
+			},
+		},
+		errorPlacement: function(error, element) {
+			if (element.hasParent('.form-group')) {
+				element = element.closest('.form-group');
+			}
 			error.insertAfter(element).addClass('invalid-feedback');
 		},
 		submitHandler: function(form) {
