--- a/site/templates/twig/items/itm/options/js/classes/Requests.js.twig
+++ b/site/templates/twig/items/itm/options/js/classes/Requests.js.twig
@@ -33,4 +33,13 @@ class CodeRequests {
 		});
 	}
 
+	getNote(itemID, type, callback) {
+		var ajax = new AjaxRequest('{{ page.jsonApiUrl('inv/itm/options/notes') }}');
+
+		ajax.setData({itemID: itemID, type: type});
+		ajax.request(function(response) {
+			callback(response)
+		});
+	}
+
 }
