--- a/site/templates/twig/items/itm/options/js/classes/note/Form.js.twig
+++ b/site/templates/twig/items/itm/options/js/classes/note/Form.js.twig
@@ -36,14 +36,15 @@ class NoteForm {
 
 		inputs.sysop.val(json.sysop);
 
-		if (json.code) {
-			inputs.submit.delete.removeAttr('disabled');
-		} else {
-			inputs.submit.delete.attr('disabled', 'true');
-		}
+
 		$('#' + inputs.note.attr('id')).rules('remove', 'required');
 
 		CodeRequests.getInstance().getNote(inputs.itemid.val(), json.input.notetype, function(note) {
+			if (note.note) {
+				inputs.submit.delete.removeAttr('disabled');
+			} else {
+				inputs.submit.delete.attr('disabled', 'true');
+			}
 			inputs.note.val(note.note);
 			form.getCodeJqvRules(json, function(rules) {
 				$('#' + inputs.note.attr('id')).rules('add', rules);
