FEAT: add hooks for userEditUrl, userDeleteUrl

--- a/site/templates/twig/msa/logm/list.twig
+++ b/site/templates/twig/msa/logm/list.twig
@@ -50,11 +50,11 @@
 					</td>
 					<td class="text-center">
 						{% if logm.recordlocker.isLocked(user.id) == false or logm.recordlocker.userHasLocked(user.id) %}
-							<a href="{# page.subUrl(sub.itemid, sub.subitemid) #}" class="btn btn-warning btn-sm">
+							<a href="{{ page.userEditUrl(user.id) }}" class="btn btn-warning btn-sm">
 								<i class="fa fa-pencil" aria-hidden="true"></i> Edit
 							</a>
 							&nbsp; &nbsp;
-							<a href="{# page.subDeleteUrl(sub.itemid, sub.subitemid) #}" class="btn btn-danger btn-sm delete_button">
+							<a href="{{ page.userDeleteUrl(user.id) }}" class="btn btn-danger btn-sm delete_button">
 								<i class="fa fa-trash" aria-hidden="true"></i> Delete
 							</a>
 						{% else %}
