--- a/site/templates/twig/items/itm/options/js/classes/code/Form.js.twig
+++ b/site/templates/twig/items/itm/options/js/classes/code/Form.js.twig
@@ -43,14 +43,16 @@ class CodeForm {
 			required: false,
 		};
 
-		if (json.code) {
-			inputs.submit.delete.removeAttr('disabled');
-		} else {
-			inputs.submit.delete.attr('disabled', 'true');
-		}
 		$('#' + inputs.code.attr('id')).rules('remove', 'required remote');
+
 		this.getCodeJqvRules(json, function(rules) {
 			$('#' + inputs.code.attr('id')).rules('add', rules);
+
+			if (json.code && rules.required === false) {
+				inputs.submit.delete.removeAttr('disabled');
+			} else {
+				inputs.submit.delete.attr('disabled', 'true');
+			}
 		});
 	}
 
