FEAT: create and use config

--- a/site/templates/twig/items/itm/options/js/classes/code/Form.js.twig
+++ b/site/templates/twig/items/itm/options/js/classes/code/Form.js.twig
@@ -12,6 +12,7 @@ class CodeForm {
 		this.id = 'code-form';
 		this.form = $('#' + this.id);
 		this.inputs = CodeInputs.getInstance();
+		this.config = CodeConfigs.getInstance();
 		this.system = 'IN';
 	}
 
