--- a/site/templates/twig/items/itm/options/js/classes/note/Form.js.twig
+++ b/site/templates/twig/items/itm/options/js/classes/note/Form.js.twig
@@ -12,6 +12,7 @@ class NoteForm {
 		this.id = 'note-form';
 		this.form = $('#' + this.id);
 		this.inputs = NoteInputs.getInstance();
+		this.config = CodeConfigs.getInstance();
 		this.system = 'IN';
 	}
 
