--- a/site/templates/twig/msa/logm/user/form.twig
+++ b/site/templates/twig/msa/logm/user/form.twig
@@ -60,6 +60,10 @@
 		</div>
 	</div>
 
+	{% include 'msa/logm/user/form/user-roles.twig' %}
+
+	{% include 'msa/logm/user/form/printers.twig' %}
+
 	<div class="d-flex justify-content-between align-items-center">
 		<button type="submit" name="action" value="update" class="btn btn-success">
 			<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
