--- a/site/templates/twig/api/lookup/misc/printers/list.twig
+++ b/site/templates/twig/api/lookup/misc/printers/list.twig
@@ -2,19 +2,35 @@
 	<thead>
 		<tr class="bg-dark text-white">
 			<th>Printer</th>
-			<th>Pitches</th>
+			<th>Pitch</th>
 			<th>Description</th>
 		</tr>
 	</thead>
 	{% for printer in results %}
-		<tr>
-			<td>
-				<a href="#" class="link printer-link" data-id="{{ printer.id }}">
-					{{ printer.id }}
-				</a>
-			</td>
-			<td>{{ printer.pitches()|join(', ') }}</td>
-			<td>{{ printer.description }}</td>
-		</tr>
+		{% set pitches = printer.pitches %}
+
+		{% if pitches|length == 0 %}
+			<tr>
+				<td>
+					<a href="#" class="link printer-link" data-id="{{ printer.id }}" data-pitch="" data-printer="{{ printer.id }}">
+						{{ printer.id }}
+					</a>
+				</td>
+				<td></td>
+				<td>{{ printer.description }}</td>
+			</tr>
+		{% endif %}
+
+		{% for pitch in pitches %}
+			<tr>
+				<td>
+					<a href="#" class="link printer-link" data-id="{{ printer.id }}" data-pitch="{{ pitch }}" data-printer="{{ printer.id ~ pitch }}">
+						{{ printer.id }}
+					</a>
+				</td>
+				<td>{{ pitch }}</td>
+				<td>{{ printer.description }}</td>
+			</tr>
+		{% endfor %}
 	{% endfor %}
 </table>
