FEAT: update lookup path from misc to msa

--- a/site/templates/twig/msa/logm/user/form/printers.twig
+++ b/site/templates/twig/msa/logm/user/form/printers.twig
@@ -22,7 +22,7 @@
 							'title': 'Search Printers',
 							'data-toggle': 'modal',
 							'data-target': '#ajax-modal',
-							'data-lookupurl': page.searchLookupUrl('misc/printers'),
+							'data-lookupurl': page.searchLookupUrl('msa/printers'),
 							'data-input': '#printerbrowse'
 						}
 					}
@@ -60,7 +60,7 @@
 							'title': 'Search Printers',
 							'data-toggle': 'modal',
 							'data-target': '#ajax-modal',
-							'data-lookupurl': page.searchLookupUrl('misc/printers'),
+							'data-lookupurl': page.searchLookupUrl('msa/printers'),
 							'data-input': '#printerreport'
 						}
 					}
