--- a/site/templates/twig/msa/logm/user/form/printers.twig
+++ b/site/templates/twig/msa/logm/user/form/printers.twig
@@ -1,6 +1,6 @@
 <div class="form-group row">
 	<div class="col-sm-3">
-		<label for="printerbrowse">Default Printers, Browse Printer</label>
+		<label for="printerbrowse">Default Printer, Browse Printer</label>
 	</div>
 	<div class="col-sm-9">
 		{% include 'util/bootstrap/form/input-group.twig' with {
@@ -30,7 +30,7 @@
 			}
 		%}
 		<small class="form-text text-muted printer-description">
-			{{ duser.printerBrowse().description }}
+
 		</small>
 	</div>
 </div>
@@ -68,7 +68,7 @@
 			}
 		%}
 		<small class="form-text text-muted printer-description">
-			{{ duser.printerReport().description }}
+			
 		</small>
 	</div>
 </div>
